[package]
name = "oligarchy"
version = "0.1.0"
authors = ["Patrick Lerner <ptlerner@gmail.com>"]
edition = "2018"
license = "LicenseRef-Oligarchy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5", features = ["dynamic"] }
bevy_ecs_tilemap = "0.4"
rand = "0.8"
env_logger = "0.9"
log = "0.4"
num-traits = "0.2"
num-derive = "0.3"
bevy_egui = "0.6"
