[package]
name = "oligarchy"
version = "0.1.7-dev"
authors = ["Izhevskoye <izhevskoye@example.com>"]
edition = "2018"
license = "LicenseRef-Oligarchy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5", features = ["dynamic"] }
bevy_ecs_tilemap = "0.4"
rand = "0.8"
env_logger = "0.9"
log = "0.4"
num-traits = "0.2"
num-derive = "0.3"
bevy_egui = "0.6"
serde = "1.0"
serde_yaml = "0.8"
hierarchical_pathfinding = "0.5"
glob = "0.3"
collecting-hashmap = "0.2"
num-format = "0.4"
directories-next = "2.0"
uuid = { version = "0.8", features = ["v4"] }
noise = "0.7"
combinations = "0.1"
